Add armv7tnhl port
Signed-off-by: Carsten Munk <carsten.munk@gmail.com>
Change-Id: Ia099ee9f1acbbbe97d504ae181c3ffbd66a6256a

--- a/baselibs.conf
+++ b/baselibs.conf
@@ -1,1 +1,1 @@
-arch i486 targets armv6l:inject armv7l:inject armv7hl:inject mipsel:inject 
+arch i486 targets armv6l:inject armv7l:inject armv7hl:inject armv7tnhl:inject mipsel:inject 
